height on mobile bux fix

--- a/media.scss
+++ b/media.scss
@@ -3,7 +3,6 @@
 @media(max-width: 1024px){
   .header{
     background: url('../project_resources/img/showcase.jpg')no-repeat center center / cover;
-    height: 100vh;
     width: 100vw;
     position: relative;
     .container {
